--- a/templates/guest/add_guest.html
+++ b/templates/guest/add_guest.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<form action="" method="POST">
+<form action="" method="POST" class="col-md-6">
     {% csrf_token %}
     {{form|crispy}}
     <button class="btn btn-primary btn-sm mt-2">Submit</button>
